@@ -18,7 +18,7 @@ is(
         'if boolean then say string',
         'If something is true, then say "It\'s true!".',
         [
-            'if ( typeof( something ) == "undefined" ) var something;',
+            'if ( typeof( something ) == "undefined" ) var something = "";',
             'if ( something == true ) {',
             'console.log( "It\'s true!" );',
             '}',
@@ -32,10 +32,10 @@ is(
             'If prime is 3 and 7 is in primes and something is true, then set answer to 42.',
         ],
         [
-            'if ( typeof( answer ) == "undefined" ) var answer;',
-            'if ( typeof( prime ) == "undefined" ) var prime;',
+            'if ( typeof( answer ) == "undefined" ) var answer = "";',
+            'if ( typeof( prime ) == "undefined" ) var prime = "";',
             'if ( typeof( primes ) == "undefined" ) var primes = [];',
-            'if ( typeof( something ) == "undefined" ) var something;',
+            'if ( typeof( something ) == "undefined" ) var something = "";',
             'prime = 3;',
             'primes = [ 3, 5, 7 ];',
             'if ( prime == 3 && primes.indexOf( 7 ) > -1 && something == true ) {',
@@ -47,8 +47,8 @@ is(
         'if conditional statement otherwise statement',
         'If prime is 3, then set result to true. Otherwise, set result to false.',
         [
-            'if ( typeof( prime ) == "undefined" ) var prime;',
-            'if ( typeof( result ) == "undefined" ) var result;',
+            'if ( typeof( prime ) == "undefined" ) var prime = "";',
+            'if ( typeof( result ) == "undefined" ) var result = "";',
             'if ( prime == 3 ) {',
             'result = true;',
             '}',
@@ -61,8 +61,8 @@ is(
         'if conditional then statement otherwise if conditional then statement',
         'If prime is 3, then set result to true. Otherwise, if prime is not 42, then set result to false.',
         [
-            'if ( typeof( prime ) == "undefined" ) var prime;',
-            'if ( typeof( result ) == "undefined" ) var result;',
+            'if ( typeof( prime ) == "undefined" ) var prime = "";',
+            'if ( typeof( result ) == "undefined" ) var result = "";',
             'if ( prime == 3 ) {',
             'result = true;',
             '}',
