@@ -1,6 +1,7 @@
 Revision history for English::Script
 
 {{$NEXT}}
+        - Fix for JS object definition syntax
         - License migrate to Artistic 2.0
         - Migrate Travis CI and Coveralls to GitHub Actions and Codecov
         - Update copyright year
